--- a/packages/core/src/tegel-lite/components/tl-tabs/tl-inline-tabs/tl-inline-tabs.scss
+++ b/packages/core/src/tegel-lite/components/tl-tabs/tl-inline-tabs/tl-inline-tabs.scss
@@ -13,7 +13,7 @@
   scrollbar-width: none;
   gap: 16px;
   position: relative;
-  background-color: var(--inline-tabs);
+  background-color: var(--inline-tabs-tab-background);
 
   &::-webkit-scrollbar {
     display: none;
