--- a/packages/core/src/tegel-lite/components/tl-tabs/tl-navigation-tabs/tl-navigation-tabs.scss
+++ b/packages/core/src/tegel-lite/components/tl-tabs/tl-navigation-tabs/tl-navigation-tabs.scss
@@ -5,7 +5,7 @@
 .tl-navigation-tabs {
   @include tds-box-sizing;
 
-  background-color: var(--navigation-tabs);
+  background-color: var(--navigation-tabs-tab-background);
   display: flex;
   flex-wrap: nowrap;
   white-space: nowrap;
